basic : username password 방식 oauth2 방식

--- a/security-basic/build.gradle
+++ b/security-basic/build.gradle
@@ -3,6 +3,8 @@ bootJar.enabled = true
 jar.enabled = false
 
 dependencies {
+    implementation project(':security-utils')
+
     runtimeOnly 'com.h2database:h2'
     implementation 'org.springframework.boot:spring-boot-starter-security'
 
