--- a/security-oauth2/build.gradle
+++ b/security-oauth2/build.gradle
@@ -8,6 +8,7 @@ dependencies {
     runtimeOnly 'com.h2database:h2'
     implementation 'org.springframework.boot:spring-boot-starter-security'
     implementation 'org.springframework.boot:spring-boot-starter-oauth2-client'
+    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
 
     // jwt 토큰 라이브러리
     implementation 'io.jsonwebtoken:jjwt-api:0.11.2'
